--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1475,8 +1475,8 @@
             gap: 12px;
             justify-content: center;
             align-items: center;
-            padding: 15px 0;
-            margin-top: 10px;
+            padding: 5px 0;
+            margin-top: 0;
         }
 
         .screenshot-controls.active {
