--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -2508,11 +2508,11 @@
 
                 if (whiteCount > 0) {
                     if (whiteCount <= 15) {
-                        xgid += String.fromCharCode(64 + whiteCount);
+                        xgid += String.fromCharCode(96 + whiteCount);
                     }
                 } else if (blackCount > 0) {
                     if (blackCount <= 15) {
-                        xgid += String.fromCharCode(96 + blackCount);
+                        xgid += String.fromCharCode(64 + blackCount);
                     }
                 } else {
                     xgid += "-";
